fix: login response and login docs
